# fort-gym

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MAC_SETUP.md  Makefile  QUICKSTART_RECOVERY.md  README.md  RECOVERY.md  deploy_fix_direct.sh  pyproject.toml  recover_and_deploy.sh
.claude/: launch.json
docs/: ARCHITECTURE.md  Actions_Headless_Safety.md  DEMO.md  DFHack_Governed_Agent.md  EXPERIMENTATION_PLAN.md  FINDINGS.md  FORT_EVAL_SPEC.md  FortGym_v0.3.0_Interactive_Step.md  LAB_VISION.md  WDSLL.md  dfhack-headless-rpc.md  score_v3_calibration.md  score_v3_proposal.md  score_v4_measurement.md  score_v5_action_truth.md
examples/: README.md
experiments/: fort_eval_easy_p1_g7_v3.yaml  fort_eval_easy_p1_g7_v4.yaml  fort_eval_easy_p1_g7_v5.yaml  fort_eval_easy_v1.yaml  memory-ablation.yaml
fort_gym/: __init__.py
hook/: build_construction.lua  build_farm_plot.lua  build_workshop.lua  calibration_kill_one.lua  complete_dig_rect.lua  designate_rect.lua  fort_metrics.lua  g7_evidence.lua  job_metrics.lua  map_snapshot.lua  order_make.lua  place_furniture.lua  prepare_keystroke_target.lua  restore_view_state.lua  set_farm_crop.lua  set_labor.lua  unsuspend_jobs.lua  view_state.lua  work_metrics.lua
scripts/: build_p1_live_calibration_bundle.py  df_headless.sh  evaluate_g7.py  generate_social_assets.py  live_interact_smoke.py  preflight_frontier_models.py  publish_leaderboard.py  replay_g7_measurements.py  rescore_traces.py  run_p1_live_calibration.py  validate_dfroot.py
tests/: conftest.py  test_actions_live.py  test_actions_schema.py  (+49 more)
(+116 files in other folders)
